// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/Assets/AssetManager no assets 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasAssetManager canvasModal--fixedSize"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "1000px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
          className="euiButtonIcon__icon"
          data-euiicon-type="cross"
          size="m"
        />
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader canvasAssetManager__modalHeader"
        >
          <div
            className="euiModalHeader__title canvasAssetManager__modalHeaderTitle"
          >
            Manage workpad assets
          </div>
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive canvasAssetManager__fileUploadWrapper"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                className="euiFilePicker euiFilePicker--compressed"
              >
                <div
                  className="euiFilePicker__wrap"
                >
                  <input
                    accept="image/*"
                    aria-describedby="generated-id"
                    className="euiFilePicker__input"
                    multiple={true}
                    onChange={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                    type="file"
                  />
                  <div
                    className="euiFilePicker__prompt"
                    id="generated-id"
                  >
                    <div
                      aria-hidden="true"
                      className="euiFilePicker__icon"
                      data-euiicon-type="importAction"
                      size="m"
                    />
                    <div
                      className="euiFilePicker__promptText"
                    >
                      Select or drag and drop images
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--subdued"
              >
                <p>
                  Below are the image assets in this workpad. Any assets that are currently in use cannot be determined at this time. To reclaim space, delete assets.
                </p>
              </div>
            </div>
            <div
              className="euiSpacer euiSpacer--l"
            />
            <div
              className="euiPanel euiPanel--paddingMedium canvasAssetManager__emptyPanel"
            >
              <div
                className="euiEmptyPrompt"
              >
                <div
                  color="subdued"
                  data-euiicon-type="importAction"
                  size="xxl"
                />
                <div
                  className="euiSpacer euiSpacer--s"
                />
                <span
                  className="euiTextColor euiTextColor--subdued"
                >
                  <h2
                    className="euiTitle euiTitle--xsmall"
                  >
                    Import your assets to get started
                  </h2>
                  <div
                    className="euiSpacer euiSpacer--m"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter canvasAssetManager__modalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow canvasAssetManager__meterWrapper"
          >
            <div
              className="euiFlexItem"
            >
              <progress
                aria-labelledby="CanvasAssetManagerLabel"
                className="euiProgress euiProgress--native euiProgress--s euiProgress--secondary"
                max={25000}
                value={0}
              />
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero eui-textNoWrap"
            >
              <div
                className="euiText euiText--medium"
                id="CanvasAssetManagerLabel"
              >
                0% space used
              </div>
            </div>
          </div>
          <button
            className="euiButton euiButton--primary euiButton--small"
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButton__content"
            >
              <span
                className="euiButton__text"
              >
                Close
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;

exports[`Storyshots components/Assets/AssetManager two assets 1`] = `
Array [
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={1}
  />,
  <div
    data-focus-lock-disabled={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="euiModal canvasAssetManager canvasModal--fixedSize"
      onKeyDown={[Function]}
      style={
        Object {
          "maxWidth": "1000px",
        }
      }
      tabIndex={0}
    >
      <button
        aria-label="Closes this modal window"
        className="euiButtonIcon euiButtonIcon--text euiModal__closeIcon"
        onClick={[Function]}
        type="button"
      >
        <div
          aria-hidden="true"
          className="euiButtonIcon__icon"
          data-euiicon-type="cross"
          size="m"
        />
      </button>
      <div
        className="euiModal__flex"
      >
        <div
          className="euiModalHeader canvasAssetManager__modalHeader"
        >
          <div
            className="euiModalHeader__title canvasAssetManager__modalHeaderTitle"
          >
            Manage workpad assets
          </div>
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive canvasAssetManager__fileUploadWrapper"
          >
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero"
            >
              <div
                className="euiFilePicker euiFilePicker--compressed"
              >
                <div
                  className="euiFilePicker__wrap"
                >
                  <input
                    accept="image/*"
                    aria-describedby="generated-id"
                    className="euiFilePicker__input"
                    multiple={true}
                    onChange={[Function]}
                    onDragLeave={[Function]}
                    onDragOver={[Function]}
                    onDrop={[Function]}
                    type="file"
                  />
                  <div
                    className="euiFilePicker__prompt"
                    id="generated-id"
                  >
                    <div
                      aria-hidden="true"
                      className="euiFilePicker__icon"
                      data-euiicon-type="importAction"
                      size="m"
                    />
                    <div
                      className="euiFilePicker__promptText"
                    >
                      Select or drag and drop images
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalBody"
        >
          <div
            className="euiModalBody__overflow"
          >
            <div
              className="euiText euiText--small"
            >
              <div
                className="euiTextColor euiTextColor--subdued"
              >
                <p>
                  Below are the image assets in this workpad. Any assets that are currently in use cannot be determined at this time. To reclaim space, delete assets.
                </p>
              </div>
            </div>
            <div
              className="euiSpacer euiSpacer--l"
            />
            <div
              className="euiFlexGrid euiFlexGrid--gutterLarge euiFlexGrid--fourths euiFlexGrid--responsive"
            >
              <div
                className="euiFlexItem"
              >
                <div
                  className="euiPanel euiPanel--paddingSmall canvasAsset"
                >
                  <div
                    className="canvasAsset__thumb canvasCheckered"
                  >
                    <figure
                      className="euiImage canvasAsset__img "
                    >
                      <img
                        alt="Asset thumbnail"
                        className="euiImage__img"
                        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA1Ni4zMSA1Ni4zMSI+PGRlZnM+PHN0eWxlPi5jbHMtMXtmaWxsOiNmZmY7c3Ryb2tlOiMwMDc4YTA7c3Ryb2tlLW1pdGVybGltaXQ6MTA7c3Ryb2tlLXdpZHRoOjJweDt9PC9zdHlsZT48L2RlZnM+PHRpdGxlPlBsYW5lIEljb248L3RpdGxlPjxnIGlkPSJMYXllcl8yIiBkYXRhLW5hbWU9IkxheWVyIDIiPjxnIGlkPSJMYXllcl8xLTIiIGRhdGEtbmFtZT0iTGF5ZXIgMSI+PHBhdGggY2xhc3M9ImNscy0xIiBkPSJNNDkuNTEsNDguOTMsNDEuMjYsMjIuNTIsNTMuNzYsMTBhNS4yOSw1LjI5LDAsMCwwLTcuNDgtNy40N2wtMTIuNSwxMi41TDcuMzgsNi43OUEuNy43LDAsMCwwLDYuNjksN0wxLjIsMTIuNDVhLjcuNywwLDAsMCwwLDFMMTkuODUsMjlsLTcuMjQsNy4yNC03Ljc0LS42YS43MS43MSwwLDAsMC0uNTMuMkwxLjIxLDM5YS42Ny42NywwLDAsMCwuMDgsMUw5LjQ1LDQ2bC4wNywwYy4xMS4xMy4yMi4yNi4zNC4zOHMuMjUuMjMuMzguMzRhLjM2LjM2LDAsMCwwLDAsLjA3TDE2LjMzLDU1YS42OC42OCwwLDAsMCwxLC4wN0wyMC40OSw1MmEuNjcuNjcsMCwwLDAsLjE5LS41NGwtLjU5LTcuNzQsNy4yNC03LjI0TDQyLjg1LDU1LjA2YS42OC42OCwwLDAsMCwxLDBsNS41LTUuNUEuNjYuNjYsMCwwLDAsNDkuNTEsNDguOTNaIi8+PC9nPjwvZz48L3N2Zz4="
                        style={Object {}}
                      />
                    </figure>
                  </div>
                  <div
                    className="euiSpacer euiSpacer--s"
                  />
                  <div
                    className="euiText euiText--extraSmall eui-textBreakAll"
                  >
                    <p
                      className="eui-textBreakAll"
                    >
                      <strong>
                        airplane
                      </strong>
                      <br />
                      <span
                        className="euiTextColor euiTextColor--subdued"
                      >
                        <small>
                          (
                          1
                           kb)
                        </small>
                      </span>
                    </p>
                  </div>
                  <div
                    className="euiSpacer euiSpacer--s"
                  />
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow"
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero asset-create-image"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <button
                          aria-label="Create image element"
                          className="euiButtonIcon euiButtonIcon--primary"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          type="button"
                        >
                          <div
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            data-euiicon-type="vector"
                            size="m"
                          />
                        </button>
                      </span>
                    </div>
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero asset-download"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <div
                          className="canvasDownload"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          <button
                            aria-label="Download"
                            className="euiButtonIcon euiButtonIcon--primary"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              className="euiButtonIcon__icon"
                              data-euiicon-type="sortDown"
                              size="m"
                            />
                          </button>
                        </div>
                      </span>
                    </div>
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <div
                          className="canvasClipboard"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          <button
                            aria-label="Copy id to clipboard"
                            className="euiButtonIcon euiButtonIcon--primary"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              className="euiButtonIcon__icon"
                              data-euiicon-type="copyClipboard"
                              size="m"
                            />
                          </button>
                        </div>
                      </span>
                    </div>
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <button
                          aria-label="Delete"
                          className="euiButtonIcon euiButtonIcon--danger"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          type="button"
                        >
                          <div
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            data-euiicon-type="trash"
                            size="m"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                className="euiFlexItem"
              >
                <div
                  className="euiPanel euiPanel--paddingSmall canvasAsset"
                >
                  <div
                    className="canvasAsset__thumb canvasCheckered"
                  >
                    <figure
                      className="euiImage canvasAsset__img "
                    >
                      <img
                        alt="Asset thumbnail"
                        className="euiImage__img"
                        src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAzOC4zOSA1Ny41NyI+PGRlZnM+PHN0eWxlPi5jbHMtMXtmaWxsOiNmZmY7c3Ryb2tlOiMwMTliOGY7c3Ryb2tlLW1pdGVybGltaXQ6MTA7c3Ryb2tlLXdpZHRoOjJweDt9PC9zdHlsZT48L2RlZnM+PHRpdGxlPkxvY2F0aW9uIEljb248L3RpdGxlPjxnIGlkPSJMYXllcl8yIiBkYXRhLW5hbWU9IkxheWVyIDIiPjxnIGlkPSJMYXllcl8xLTIiIGRhdGEtbmFtZT0iTGF5ZXIgMSI+PHBhdGggY2xhc3M9ImNscy0xIiBkPSJNMTkuMTksMUExOC4xOSwxOC4xOSwwLDAsMCwyLjk0LDI3LjM2aDBhMTkuNTEsMTkuNTEsMCwwLDAsMSwxLjc4TDE5LjE5LDU1LjU3LDM0LjM4LDI5LjIxQTE4LjE5LDE4LjE5LDAsMCwwLDE5LjE5LDFabTAsMjMuMjlhNS41Myw1LjUzLDAsMSwxLDUuNTMtNS41M0E1LjUzLDUuNTMsMCwwLDEsMTkuMTksMjQuMjlaIi8+PC9nPjwvZz48L3N2Zz4="
                        style={Object {}}
                      />
                    </figure>
                  </div>
                  <div
                    className="euiSpacer euiSpacer--s"
                  />
                  <div
                    className="euiText euiText--extraSmall eui-textBreakAll"
                  >
                    <p
                      className="eui-textBreakAll"
                    >
                      <strong>
                        marker
                      </strong>
                      <br />
                      <span
                        className="euiTextColor euiTextColor--subdued"
                      >
                        <small>
                          (
                          1
                           kb)
                        </small>
                      </span>
                    </p>
                  </div>
                  <div
                    className="euiSpacer euiSpacer--s"
                  />
                  <div
                    className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsBaseline euiFlexGroup--justifyContentCenter euiFlexGroup--directionRow"
                  >
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero asset-create-image"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <button
                          aria-label="Create image element"
                          className="euiButtonIcon euiButtonIcon--primary"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          type="button"
                        >
                          <div
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            data-euiicon-type="vector"
                            size="m"
                          />
                        </button>
                      </span>
                    </div>
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero asset-download"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <div
                          className="canvasDownload"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          <button
                            aria-label="Download"
                            className="euiButtonIcon euiButtonIcon--primary"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              className="euiButtonIcon__icon"
                              data-euiicon-type="sortDown"
                              size="m"
                            />
                          </button>
                        </div>
                      </span>
                    </div>
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <div
                          className="canvasClipboard"
                          onClick={[Function]}
                          onKeyPress={[Function]}
                          role="button"
                          tabIndex={0}
                        >
                          <button
                            aria-label="Copy id to clipboard"
                            className="euiButtonIcon euiButtonIcon--primary"
                            type="button"
                          >
                            <div
                              aria-hidden="true"
                              className="euiButtonIcon__icon"
                              data-euiicon-type="copyClipboard"
                              size="m"
                            />
                          </button>
                        </div>
                      </span>
                    </div>
                    <div
                      className="euiFlexItem euiFlexItem--flexGrowZero"
                    >
                      <span
                        className="euiToolTipAnchor"
                        onKeyUp={[Function]}
                        onMouseOut={[Function]}
                        onMouseOver={[Function]}
                      >
                        <button
                          aria-label="Delete"
                          className="euiButtonIcon euiButtonIcon--danger"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          type="button"
                        >
                          <div
                            aria-hidden="true"
                            className="euiButtonIcon__icon"
                            data-euiicon-type="trash"
                            size="m"
                          />
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="euiModalFooter canvasAssetManager__modalFooter"
        >
          <div
            className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow canvasAssetManager__meterWrapper"
          >
            <div
              className="euiFlexItem"
            >
              <progress
                aria-labelledby="CanvasAssetManagerLabel"
                className="euiProgress euiProgress--native euiProgress--s euiProgress--secondary"
                max={25000}
                value={2}
              />
            </div>
            <div
              className="euiFlexItem euiFlexItem--flexGrowZero eui-textNoWrap"
            >
              <div
                className="euiText euiText--medium"
                id="CanvasAssetManagerLabel"
              >
                0% space used
              </div>
            </div>
          </div>
          <button
            className="euiButton euiButton--primary euiButton--small"
            onClick={[Function]}
            type="button"
          >
            <span
              className="euiButton__content"
            >
              <span
                className="euiButton__text"
              >
                Close
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  <div
    data-focus-guard={true}
    style={
      Object {
        "height": "0px",
        "left": "1px",
        "overflow": "hidden",
        "padding": 0,
        "position": "fixed",
        "top": "1px",
        "width": "1px",
      }
    }
    tabIndex={0}
  />,
]
`;
